# ENVY

./: .gitignore  README.md  config.py  global_config.py  launch_console.py  launch_envy.py  prep_env.py  pyproject.toml  requirements.txt  todo
__ENVYTEST__/: __config__.py  build_config.py  config_bridge.py  launch_console.py  launch_envy.lnk  launch_envy.py  user_config.py
__ENVYTEST__/Connections/: clients.json  server.txt
__ENVYTEST__/Plugins/: Console_Functions.py  Envy_Functions.py  Server_Functions.py
envy/: Instructions.txt  build_config.py  config.ini  config_bridge.py  launch_UI.py  launch_console.py  launch_console.pyw  launch_envy.py  launch_envy.pyw  launch_envyUI.py
envy/Connections/: clients.json  server.txt
envy/Jobs/: Envy_Database.db
envy/Plugins/: Console_Functions.py  Envy_Functions.py  Server_Functions.py
envy/tests/: scratch.py  test_server.py
envy/utils/: build_config.py  config_bridge.py
envyCore/: console.py  envy.py  server.py
envyDB/: __init__.py  db.py
envyJobs/: __init__.py  enums.py  ingester.py  ingestor.py  job.py  jobItem.py  jobTree.py  jobTreeAbstractItemModel.py  scheduler.py  scheduler_v2.py
envyLib/: envy_logger.py  envy_utils.py
envyRepo/: build_config.py  prep_env.py  todo
envyUI/: UI_test.py  __init__.py  console_widget.py  envyMainWindow.py  envyMonitor.py  info  mainWindow.py  nodeGraphSimulation.py  nodeSolver.py
networkUtils/: __init__.py  client.py  console.py  exceptions.py  message.py  message_purpose.py  purpose.py  server.py
processes/: envyHWedge.py  envyRenderer.py  envyUSDRenderer.py
(+147 files in other folders)
